# discord-payment-disclosure-bot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml
src/bot/: __init__.py  config.py  core.py  logger.py  server.py  types.py
src/config/: __init__.py  config.example.toml  config.toml
src/config/templates/: messages.yaml
tests/: conftest.py  test_bot.py
